New: ObjectLocationDetails.java to store instances of user Location.
Added: Image Capture feature to ActivitySignup to set shopImage
Converted bitmap to drawable & viceversa.

Added: CustomLocationListener Interface to FragmentDialogAddressPicker.java to pass location data back to ActivitySignup.java

Added: Proper JSON for signupObject

Misc. fixes & refactoring.

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -101,7 +101,8 @@
         android:drawableEnd="@drawable/ic_baseline_my_location_24"
         android:ems="10"
         android:hint="Address"
-        android:inputType="textPostalAddress"
+        android:editable="false"
+        android:inputType="none"
         android:backgroundTint="@color/textfield_tint"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
