--- a/app/src/main/res/layout/layout_address_picker_dialog.xml
+++ b/app/src/main/res/layout/layout_address_picker_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="100dp"
+        android:duplicateParentState="true"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
