New: FragmentDialogShopTimingsPicker.java to get shop timings from user in the form of JSON Object.
Added: CustomListener for passing data from Timings Dialog to ActivitySignup.java

Added: Setup Api Call for signup, connected location & shop timings for jsonObject

Added: New XML layout layout_shop_timings_picker_dialog.xml (Google based styled)

Misc. fixes & refactoring.

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivitySignup">
+    tools:context=".Signup.ActivitySignup">
 
     <TextView
         android:id="@+id/textView"
@@ -36,10 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Shop Name"
         android:inputType="textPersonName"
-        android:backgroundTint="@color/textfield_tint"
         app:layout_constraintBottom_toTopOf="@+id/ownerName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/shopImage"
@@ -52,10 +52,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Owner Name"
         android:inputType="textPersonName"
-        android:backgroundTint="@color/textfield_tint"
         app:layout_constraintBottom_toBottomOf="@+id/shopImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/shopImage" />
@@ -67,10 +67,10 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="phone"
-        android:backgroundTint="@color/textfield_tint"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
         app:layout_constraintTop_toBottomOf="@+id/shopImage" />
@@ -82,10 +82,10 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:backgroundTint="@color/textfield_tint"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
@@ -98,12 +98,14 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
         android:drawableEnd="@drawable/ic_baseline_my_location_24"
         android:ems="10"
+        android:focusable="false"
         android:hint="Address"
-        android:editable="false"
         android:inputType="none"
-        android:backgroundTint="@color/textfield_tint"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
@@ -116,10 +118,10 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Shop Type"
         android:inputType="textPostalAddress"
-        android:backgroundTint="@color/textfield_tint"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
@@ -132,10 +134,13 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
-        android:ems="10"
-        android:hint="Shop Timings"
-        android:inputType="textPostalAddress"
         android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Shop Timings"
+        android:inputType="none"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
