--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,7 +28,20 @@
         android:layout_marginTop="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView"
-        app:srcCompat="@android:drawable/ic_menu_camera" />
+        app:srcCompat="@drawable/shops" />
+
+    <ImageView
+        android:id="@+id/sampleShopImage"
+        android:layout_width="97dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:srcCompat="@drawable/shops" />
 
     <EditText
         android:id="@+id/shopName"
@@ -157,6 +170,18 @@
         app:layout_constraintEnd_toEndOf="@+id/ownerName"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
         app:layout_constraintTop_toBottomOf="@+id/shopTimings" />
+
+    <Button
+        android:id="@+id/tempHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="25dp"
+        android:paddingVertical="10dp"
+        android:text="Temp. Home"
+        app:layout_constraintEnd_toEndOf="@+id/ownerName"
+        app:layout_constraintStart_toStartOf="@+id/shopImage"
+        app:layout_constraintTop_toBottomOf="@+id/signup" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
