--- a/app/src/main/res/layout/layout_address_picker_dialog.xml
+++ b/app/src/main/res/layout/layout_address_picker_dialog.xml
@@ -60,10 +60,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginVertical="15dp"
                 android:background="@android:color/transparent"
                 android:hint="Landmark..."
                 android:textSize="18dp"
+                app:layout_constraintBottom_toTopOf="@+id/saveAddress"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/generatedAddress" />
@@ -72,12 +73,11 @@
                 android:id="@+id/saveAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
+                android:layout_marginBottom="15dp"
                 android:text="Save Address"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/landmark" />
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
