--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/usernaam"
+        android:id="@+id/contact_no"
         android:layout_width="311dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@android:color/transparent"
-        android:backgroundTint="#2D2D2D"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:hint="Enter Phone no."
         android:inputType="textPersonName"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
-        android:backgroundTint="#2D2D2D"
+        android:backgroundTint="@color/textfield_tint"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -61,10 +61,10 @@
         android:textColorHint="#2D2D2D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernaam" />
+        app:layout_constraintTop_toBottomOf="@+id/contact_no" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/Submit_button"
         android:layout_width="152dp"
         android:layout_height="40dp"
         android:layout_marginTop="40dp"
@@ -82,13 +82,13 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="2dp"
         android:text="New to our app?"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/signup_textview"
         app:layout_constraintHorizontal_bias="0.992"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/Submit_button" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/signup_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="130dp"
