--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -132,9 +132,12 @@
         android:layout_marginTop="25dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
         android:ems="10"
+        android:focusable="false"
         android:hint="Shop Type"
-        android:inputType="textPostalAddress"
+        android:inputType="none"
+        android:longClickable="false"
         app:layout_constraintEnd_toEndOf="@+id/shopName"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/shopImage"
