--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
 <!--    <color name="circle_toggle_button_text_color">@color/teal_200</color>-->
     <color name="dayPressed">@color/teal_700</color>
     <color name="daySelected">@color/teal_200</color>
-    <color name="daySelectedTextColor">@android:color/white</color>
+    <color name="daySelectedTextColor">@color/white</color>
     <color name="dayDeselected">#f2f2f2</color>
     <color name="dayDeselectedTextColor">@color/teal_200</color>
 
@@ -22,4 +22,5 @@
     <color name="daySelectedAndDisabledTextColor">@color/daySelectedTextColor</color>
     <color name="dayDeselectedAndDisabled">@color/dayDeselected</color>
     <color name="dayDeselectedAndDisabledTextColor">@android:color/darker_gray</color>
+
 </resources>
