--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,10 +5,10 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityLogin">
+    tools:context=".Login.ActivityLogin">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/loginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
@@ -23,14 +23,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/contact_no"
+        android:id="@+id/loginParameter"
         android:layout_width="311dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@color/textfield_tint"
         android:ems="10"
-        android:hint="Enter Phone no."
+        android:hint="Enter Phone no. / Email"
         android:inputType="textPersonName"
         android:padding="10dp"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
@@ -38,13 +38,13 @@
         android:paddingStart="20dp"
         android:textColor="#2D2D2D"
         android:textColorHint="#2d2d2d"
-        app:layout_constraintBottom_toTopOf="@+id/Password"
+        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />
 
     <EditText
-        android:id="@+id/Password"
+        android:id="@+id/loginPassword"
         android:layout_width="311dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -61,10 +61,10 @@
         android:textColorHint="#2D2D2D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contact_no" />
+        app:layout_constraintTop_toBottomOf="@+id/loginParameter" />
 
     <Button
-        android:id="@+id/Submit_button"
+        android:id="@+id/loginButton"
         android:layout_width="152dp"
         android:layout_height="40dp"
         android:layout_marginTop="40dp"
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Password" />
+        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
 
     <TextView
         android:id="@+id/textView3"
@@ -82,13 +82,13 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="2dp"
         android:text="New to our app?"
-        app:layout_constraintEnd_toStartOf="@+id/signup_textview"
+        app:layout_constraintEnd_toStartOf="@+id/signupTextview"
         app:layout_constraintHorizontal_bias="0.992"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Submit_button" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <TextView
-        android:id="@+id/signup_textview"
+        android:id="@+id/signupTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="130dp"
