--- a/app/src/main/res/layout/activity_presign_up.xml
+++ b/app/src/main/res/layout/activity_presign_up.xml
@@ -5,7 +5,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityLogin">
+    tools:context=".Login.ActivityLogin">
 
     <TextView
         android:id="@+id/textView5"
@@ -30,6 +30,7 @@
         android:background="@android:color/transparent"
         android:backgroundTint="#2D2D2D"
         android:ems="10"
+        android:maxLength="10"
         android:hint="Enter Phone no."
         android:inputType="textPersonName"
         android:padding="10dp"
