--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,21 +4,190 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profile.ProfileFragment">
+    tools:context=".Nav.Profile.ProfileFragment">
 
     <TextView
-        android:id="@+id/text_profile"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/title_profile"
+        android:text="Profile"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
+
+    <ImageView
+        android:id="@+id/profileShopImage"
+        android:layout_width="97dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:srcCompat="@drawable/shops" />
+
+    <ImageView
+        android:id="@+id/sampleShopImage"
+        android:layout_width="97dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:srcCompat="@drawable/shops" />
+
+    <ImageView
+        android:id="@+id/sampleErrorImage"
+        android:layout_width="97dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        android:clickable="false"
+        android:focusable="false"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:srcCompat="@drawable/image_error" />
+
+    <EditText
+        android:id="@+id/profileShopName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:ems="10"
+        android:hint="Shop Name"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/profileOwnerName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/profileOwnerName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:ems="10"
+        android:hint="Owner Name"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/profileShopImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileShopName" />
+
+    <EditText
+        android:id="@+id/profileContactNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:ems="10"
+        android:maxLength="10"
+        android:hint="Contact Number"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="@+id/profileShopName"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileShopImage" />
+
+    <EditText
+        android:id="@+id/profileEmailAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:ems="10"
+        android:hint="Email Address"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="@+id/profileShopName"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileContactNumber" />
+
+    <EditText
+        android:id="@+id/profileVendorAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
+        android:drawableEnd="@drawable/ic_baseline_my_location_24"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Address"
+        android:inputType="none"
+        android:longClickable="false"
+        app:layout_constraintEnd_toEndOf="@+id/profileShopName"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileEmailAddress" />
+
+    <EditText
+        android:id="@+id/profileShopType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:enabled="false"
+        android:focusable="false"
+        android:hint="Shop Type"
+        android:inputType="none"
+        android:longClickable="false"
+        app:layout_constraintEnd_toEndOf="@+id/profileShopName"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileVendorAddress" />
+
+    <EditText
+        android:id="@+id/profileShopTimings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="25dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@color/textfield_tint"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:hint="Shop Timings"
+        android:inputType="none"
+        android:longClickable="false"
+        app:layout_constraintEnd_toEndOf="@+id/profileShopName"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileShopType" />
+
+    <Button
+        android:id="@+id/profileSaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="25dp"
+        android:paddingVertical="10dp"
+        android:text="Save"
+        app:layout_constraintEnd_toEndOf="@+id/profileOwnerName"
+        app:layout_constraintStart_toStartOf="@+id/profileShopImage"
+        app:layout_constraintTop_toBottomOf="@+id/profileShopTimings" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
