--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.minor.vendorapp.ui.home.HomeFragment"
+        android:name="com.minor.vendorapp.Nav.Home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_products"
-        android:name="com.minor.vendorapp.ui.products.ProductsFragment"
+        android:name="com.minor.vendorapp.Nav.Products.ProductsFragment"
         android:label="@string/title_products"
         tools:layout="@layout/fragment_products" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.minor.vendorapp.ui.profile.ProfileFragment"
+        android:name="com.minor.vendorapp.Nav.Profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
