Commit before start of 2nd phase

--- a/app/src/main/res/layout/activity_presign_up.xml
+++ b/app/src/main/res/layout/activity_presign_up.xml
@@ -24,21 +24,20 @@
 
     <EditText
         android:id="@+id/contact_no"
-        android:layout_width="311dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
         android:layout_marginTop="40dp"
         android:background="@android:color/transparent"
-        android:backgroundTint="#2D2D2D"
+        android:backgroundTint="@color/textfield_tint"
         android:ems="10"
         android:maxLength="10"
         android:hint="Enter Phone no."
         android:inputType="textPersonName"
-        android:padding="10dp"
+        android:paddingVertical="10dp"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:drawablePadding="10dp"
-        android:paddingStart="20dp"
-        android:textColor="#2D2D2D"
-        android:textColorHint="#2d2d2d"
+        android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,40 +46,39 @@
 
     <EditText
         android:id="@+id/Password"
-        android:layout_width="311dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
         android:layout_marginTop="12dp"
         android:background="@android:color/transparent"
-        android:backgroundTint="#2D2D2D"
+        android:backgroundTint="@color/textfield_tint"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
-        android:padding="10dp"
-        android:paddingStart="20dp"
-        android:textColor="#2D2D2D"
-        android:textColorHint="#2D2D2D"
+        android:paddingVertical="10dp"
+        android:paddingStart="10dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contact_no" />
 
     <EditText
         android:id="@+id/Confirm_password"
-        android:layout_width="311dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp"
         android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
-        android:backgroundTint="#2D2D2D"
+        android:backgroundTint="@color/textfield_tint"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="ConfirmPassword"
         android:inputType="textPassword"
-        android:padding="10dp"
-        android:paddingStart="20dp"
-        android:textColor="#2D2D2D"
-        android:textColorHint="#2D2D2D"
+        android:paddingVertical="10dp"
+        android:paddingStart="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/Password"
+        app:layout_constraintEnd_toEndOf="@+id/Password"
         app:layout_constraintStart_toEndOf="@+id/Password"
         app:layout_constraintTop_toTopOf="@+id/Password"
         app:layout_constraintVertical_bias="0.533"
@@ -115,6 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/Confirm_password"
+        app:layout_constraintEnd_toEndOf="@+id/Confirm_password"
         app:layout_constraintStart_toEndOf="@+id/Confirm_password"
         app:layout_constraintTop_toTopOf="@+id/Confirm_password"
         app:layout_constraintVertical_bias="0.466"
