--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Nav.Profile.ProfileFragment">
+    tools:context=".Nav.Profile.ProfileFragment"
+    android:id="@+id/profileLayout">
 
     <TextView
         android:id="@+id/textView"
