--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="blue">#1C04FC</color>
+    <color name="blue_light">#c4e4fc</color>
+    <color name="green">#14A31D</color>
     <color name="textfield_tint">#222222</color>
+    <color name="line_black">#2D2D2D</color>
+    <color name="canvas_bg">#BCBCE4</color>
 
-<!--    <color name="circle_toggle_button_text_color">@color/teal_200</color>-->
+    <!--    <color name="circle_toggle_button_text_color">@color/teal_200</color>-->
     <color name="dayPressed">@color/teal_700</color>
     <color name="daySelected">@color/teal_200</color>
     <color name="daySelectedTextColor">@color/white</color>
