--- a/app/src/main/res/layout/fragment_signup_user_details.xml
+++ b/app/src/main/res/layout/fragment_signup_user_details.xml
@@ -11,7 +11,9 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Signup Activity"
+        android:text="Set Shop"
+        android:textStyle="bold"
+        android:textColor="@color/secondaryPink"
         android:textAlignment="center"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
