--- a/app/src/main/res/layout/layout_order_listing_tile.xml
+++ b/app/src/main/res/layout/layout_order_listing_tile.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/canvas_bg"
+    android:background="@color/secondaryPink"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -131,8 +131,9 @@
                 android:gravity="center"
                 android:paddingHorizontal="10dp"
                 android:text="View Details"
-                android:textColor="@color/blue"
+                android:textColor="@color/secondaryPink"
                 android:textSize="16dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tileDetailOrderCustomerAddress" />
