--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -68,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                tools:listitem="@layout/layout_product_listing_tile"
                 tools:ignore="ScrollViewSize" />
 
         </ScrollView>
