--- a/app/src/main/res/layout/fragment_signup_user_credentials.xml
+++ b/app/src/main/res/layout/fragment_signup_user_credentials.xml
@@ -12,10 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:text="Credentials"
+        android:text="Signup"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000"
+        android:textColor="@color/secondaryPink"
         android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
